--- a/codepros.html
+++ b/codepros.html
@@ -22,134 +22,114 @@
                     - Code can be provided upon request.
                 </p>
                 <div class="codelist">
-                    <ul class="codechart">
-                        <li>
-                            <div class="codeimage">
-                                <a href="codes/portal/Lab12.html" target="_blank">
-                                    <img src="img_folder/code_img/portal.jpg" alt="portal" class="codepic">
-                                    <div class="overlay">
-                                        <p style="font-size: 16px;">
-                                            <span style="font-weight: bold; font-size: 20px;">Portal - 3D</span><br>
-                                            <br>
-                                            - click to play -
-                                        </p>
-                                    </div>
-                                </a>
+                    <div class="codeimage">
+                        <a href="codes/portal/Lab12.html" target="_blank">
+                            <img src="img_folder/code_img/portal.jpg" alt="portal" class="codepic">
+                            <div class="overlay">
+                                <p style="font-size: 16px; text-align: center;">
+                                    <span style="font-weight: bold; font-size: 20px;">Portal - 3D</span><br>
+                                    <br>
+                                    - click to play -
+                                </p>
                             </div>
-                        </li>
-                        <li>
-                            <div class="codeimage">
-                                <a href="codes/mariocart/Lab08.html" target="_blank">
-                                    <img src="img_folder/code_img/mariocart.jpg" alt="mariocart" class="codepic">
-                                    <div class="overlay">
-                                        <p style="font-size: 16px;">
-                                            <span style="font-weight: bold; font-size: 20px;">Mario Cart - 3D</span><br>
-                                            <br>
-                                            - click to play -
-                                        </p>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="codes/mariocart/Lab08.html" target="_blank">
+                            <img src="img_folder/code_img/mariocart.jpg" alt="mariocart" class="codepic">
+                            <div class="overlay">
+                                <p style="font-size: 16px; text-align: center;">
+                                    <span style="font-weight: bold; font-size: 20px;">Mario Cart - 3D</span><br>
+                                    <br>
+                                    - click to play -
+                                </p>
                             </div>
-                        </li>
-                        <li>
-                            <div class="codeimage">
-                                <a href="codes/mario/Lab04.html" target="_blank">
-                                    <img src="img_folder/code_img/mario.jpg" alt="mario" class="codepic">
-                                    <div class="overlay">
-                                        <p style="font-size: 16px;">
-                                            <span style="font-weight: bold; font-size: 20px;">Mario - 2D</span><br>
-                                            <br>
-                                            - click to play -
-                                        </p>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="codes/mario/Lab04.html" target="_blank">
+                            <img src="img_folder/code_img/mario.jpg" alt="mario" class="codepic">
+                            <div class="overlay">
+                                <p style="font-size: 16px; text-align: center;">
+                                    <span style="font-weight: bold; font-size: 20px;">Mario - 2D</span><br>
+                                    <br>
+                                    - click to play -
+                                </p>
                             </div>
-                        </li>
-                        <li>
-                            <div class="codeimage">
-                                <a href="codes/pacman/Lab05.html" target="_blank">
-                                    <img src="img_folder/code_img/pacman.jpg" alt="pac-man" class="codepic">
-                                    <div class="overlay">
-                                        <p style="font-size: 16px;">
-                                            <span style="font-weight: bold; font-size: 20px;">Pac-Man - 2D</span><br>
-                                            <br>
-                                            - click to play -
-                                        </p>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="codes/pacman/Lab05.html" target="_blank">
+                            <img src="img_folder/code_img/pacman.jpg" alt="pac-man" class="codepic">
+                            <div class="overlay">
+                                <p style="font-size: 16px; text-align: center;">
+                                    <span style="font-weight: bold; font-size: 20px;">Pac-Man - 2D</span><br>
+                                    <br>
+                                    - click to play -
+                                </p>
                             </div>
-                        </li>
-                        <li>
-                            <div class="codeimage">
-                                <a href="codes/starfox/Lab07.html" target="_blank">
-                                    <img src="img_folder/code_img/starfox.jpg" alt="star fox" class="codepic">
-                                    <div class="overlay">
-                                        <p style="font-size: 16px;">
-                                            <span style="font-weight: bold; font-size: 20px;">Star Fox Tunnel - 3D</span><br>
-                                            <br>
-                                            - click to play -
-                                        </p>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="codes/starfox/Lab07.html" target="_blank">
+                            <img src="img_folder/code_img/starfox.jpg" alt="star fox" class="codepic">
+                            <div class="overlay">
+                                <p style="font-size: 16px; text-align: center;">
+                                    <span style="font-weight: bold; font-size: 20px;">Star Fox Tunnel - 3D</span><br>
+                                    <br>
+                                    - click to play -
+                                </p>
                             </div>
-                        </li>
-                        <li>
-                            <div class="codeimage">
-                                <a href="codes/zelda/Lab06.html" target="_blank">
-                                    <img src="img_folder/code_img/zelda.jpg" alt="zelda" class="codepic">
-                                    <div class="overlay">
-                                        <p style="font-size: 16px;">
-                                            <span style="font-weight: bold; font-size: 20px;">Zelda - 2D</span><br>
-                                            <br>
-                                            - click to play -
-                                        </p>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="codes/zelda/Lab06.html" target="_blank">
+                            <img src="img_folder/code_img/zelda.jpg" alt="zelda" class="codepic">
+                            <div class="overlay">
+                                <p style="font-size: 16px; text-align: center;">
+                                    <span style="font-weight: bold; font-size: 20px;">Zelda - 2D</span><br>
+                                    <br>
+                                    - click to play -
+                                </p>
                             </div>
-                        </li>
-                        <li>
-                            <div class="codeimage">
-                                <a href="codes/frogger/Lab03.html" target="_blank">
-                                    <img src="img_folder/code_img/frogger.jpg" alt="frogger" class="codepic">
-                                    <div class="overlay">
-                                        <p style="font-size: 16px;">
-                                            <span style="font-weight: bold; font-size: 20px;">Frogger - 2D</span><br>
-                                            <br>
-                                            - click to play -
-                                        </p>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="codes/frogger/Lab03.html" target="_blank">
+                            <img src="img_folder/code_img/frogger.jpg" alt="frogger" class="codepic">
+                            <div class="overlay">
+                                <p style="font-size: 16px; text-align: center;">
+                                    <span style="font-weight: bold; font-size: 20px;">Frogger - 2D</span><br>
+                                    <br>
+                                    - click to play -
+                                </p>
                             </div>
-                        </li>
-                        <li>
-                            <div class="codeimage">
-                                <a href="codes/astroid/Lab02.html" target="_blank">
-                                    <img src="img_folder/code_img/astroid.jpg" alt="astroid" class="codepic">
-                                    <div class="overlay">
-                                        <p style="font-size: 16px;">
-                                            <span style="font-weight: bold; font-size: 20px;">Astroid - 2D</span><br>
-                                            <br>
-                                            - click to play -
-                                        </p>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="codes/astroid/Lab02.html" target="_blank">
+                            <img src="img_folder/code_img/astroid.jpg" alt="astroid" class="codepic">
+                            <div class="overlay">
+                                <p style="font-size: 16px; text-align: center;">
+                                    <span style="font-weight: bold; font-size: 20px;">Astroid - 2D</span><br>
+                                    <br>
+                                    - click to play -
+                                </p>
                             </div>
-                        </li>
-                        <li>
-                            <div class="codeimage">
-                                <a href="codes/pong/Lab01.html" target="_blank">
-                                    <img src="img_folder/code_img/pong.jpg" alt="pong" class="codepic">
-                                    <div class="overlay">
-                                        <p style="font-size: 16px;">
-                                            <span style="font-weight: bold; font-size: 20px;">Pong - 2D</span><br>
-                                            <br>
-                                            - click to play -
-                                        </p>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="codes/pong/Lab01.html" target="_blank">
+                            <img src="img_folder/code_img/pong.jpg" alt="pong" class="codepic">
+                            <div class="overlay">
+                                <p style="font-size: 16px; text-align: center;">
+                                    <span style="font-weight: bold; font-size: 20px;">Pong - 2D</span><br>
+                                    <br>
+                                    - click to play -
+                                </p>
                             </div>
-                        </li>
-                    </ul>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
