--- a/arts.html
+++ b/arts.html
@@ -25,15 +25,15 @@
                         <h2 style="font-size: 20px; font-weight: normal;">City Witch</h2>
                     </div>
                     <div class="artlist">
-                        <img src="img_folder/project_img/citywitch/remi.jpg" alt="remi" class="art" onclick="openPopup('img_folder/project_img/citywitch/remi.jpg')">
-                        <img src="img_folder/project_img/citywitch/erin.jpg" alt="erin" class="art" onclick="openPopup('img_folder/project_img/citywitch/erin.jpg')">
-                        <img src="img_folder/project_img/citywitch/sasha.jpg" alt="sasha" class="art" onclick="openPopup('img_folder/project_img/citywitch/sasha.jpg')">
-                        <img src="img_folder/project_img/citywitch/monster.jpg" alt="monsters" class="art" onclick="openPopup('img_folder/project_img/citywitch/monster.jpg')">
-                        <img src="img_folder/project_img/citywitch/coverbg.jpg" alt="coverbg" class="art" onclick="openPopup('img_folder/project_img/citywitch/coverbg.jpg')">
-                        <img src="img_folder/project_img/citywitch/endscene1.jpg" alt="end1" class="art" onclick="openPopup('img_folder/project_img/citywitch/endscene1.jpg')">
-                        <img src="img_folder/project_img/citywitch/endscene2.jpg" alt="end2" class="art" onclick="openPopup('img_folder/project_img/citywitch/endscene2.jpg')">
-                        <img src="img_folder/project_img/citywitch/endscene3.jpg" alt="end3" class="art" onclick="openPopup('img_folder/project_img/citywitch/endscene3.jpg')">
-                        <img src="img_folder/project_img/citywitch/finalscene.jpg" alt="fin" class="art" onclick="openPopup('img_folder/project_img/citywitch/finalscene.jpg')">
+                        <img src="project/citywitch/remi.jpg" alt="remi" class="art" onclick="openPopup('project/citywitch/remi.jpg')">
+                        <img src="project/citywitch/erin.jpg" alt="erin" class="art" onclick="openPopup('project/citywitch/erin.jpg')">
+                        <img src="project/citywitch/sasha.jpg" alt="sasha" class="art" onclick="openPopup('project/citywitch/sasha.jpg')">
+                        <img src="project/citywitch/monster.jpg" alt="monsters" class="art" onclick="openPopup('project/citywitch/monster.jpg')">
+                        <img src="project/citywitch/coverbg.jpg" alt="coverbg" class="art" onclick="openPopup('project/citywitch/coverbg.jpg')">
+                        <img src="project/citywitch/endscene1.jpg" alt="end1" class="art" onclick="openPopup('project/citywitch/endscene1.jpg')">
+                        <img src="project/citywitch/endscene2.jpg" alt="end2" class="art" onclick="openPopup('project/citywitch/endscene2.jpg')">
+                        <img src="project/citywitch/endscene3.jpg" alt="end3" class="art" onclick="openPopup('project/citywitch/endscene3.jpg')">
+                        <img src="project/citywitch/finalscene.jpg" alt="fin" class="art" onclick="openPopup('project/citywitch/finalscene.jpg')">
                     </div>
                     <br>
                     <br>
@@ -42,16 +42,16 @@
                         <h2 style="font-size: 20px; font-weight: normal;">Little Dream</h2>
                     </div>
                     <div class="artlist">
-                        <img src="img_folder/project_img/littledream/New_Cover.jpg" alt="cover" class="art" onclick="openPopup('img_folder/project_img/littledream/New_Cover.jpg')">
-                        <img src="img_folder/project_img/littledream/rules.jpg" alt="rules" class="art" onclick="openPopup('img_folder/project_img/littledream/rules.jpg')">
-                        <img src="img_folder/project_img/littledream/rocket.jpg" alt="rocket" class="art" onclick="openPopup('img_folder/project_img/littledream/rocket.jpg')">
-                        <img src="img_folder/project_img/littledream/characterback.jpg" alt="ccardb" class="art" onclick="openPopup('img_folder/project_img/littledream/characterback.jpg')">
-                        <img src="img_folder/project_img/littledream/charactercard.jpg" alt="ccard" class="art" onclick="openPopup('img_folder/project_img/littledream/charactercard.jpg')">
-                        <img src="img_folder/project_img/littledream/functioncard.jpg" alt="fcard" class="art" onclick="openPopup('img_folder/project_img/littledream/functioncard.jpg')">
-                        <img src="img_folder/project_img/littledream/Gainmaterial.jpg" alt="gcard" class="art" onclick="openPopup('img_folder/project_img/littledream/Gainmaterial.jpg')">
-                        <img src="img_folder/project_img/littledream/Unfreecard.jpg" alt="ucard" class="art" onclick="openPopup('img_folder/project_img/littledream/Unfreecard.jpg')">
-                        <img src="img_folder/project_img/littledream/Breakingcard.jpg" alt="bcard" class="art" onclick="openPopup('img_folder/project_img/littledream/Breakingcard.jpg')">
-                        <img src="img_folder/project_img/littledream/Reportcard.jpg" alt="rcard" class="art" onclick="openPopup('img_folder/project_img/littledream/Reportcard.jpg')">
+                        <img src="project/littledream/New_Cover.jpg" alt="cover" class="art" onclick="openPopup('project/littledream/New_Cover.jpg')">
+                        <img src="project/littledream/rules.jpg" alt="rules" class="art" onclick="openPopup('project/littledream/rules.jpg')">
+                        <img src="project/littledream/rocket.jpg" alt="rocket" class="art" onclick="openPopup('project/littledream/rocket.jpg')">
+                        <img src="project/littledream/characterback.jpg" alt="ccardb" class="art" onclick="openPopup('project/littledream/characterback.jpg')">
+                        <img src="project/littledream/charactercard.jpg" alt="ccard" class="art" onclick="openPopup('project/littledream/charactercard.jpg')">
+                        <img src="project/littledream/functioncard.jpg" alt="fcard" class="art" onclick="openPopup('project/littledream/functioncard.jpg')">
+                        <img src="project/littledream/Gainmaterial.jpg" alt="gcard" class="art" onclick="openPopup('project/littledream/Gainmaterial.jpg')">
+                        <img src="project/littledream/Unfreecard.jpg" alt="ucard" class="art" onclick="openPopup('project/littledream/Unfreecard.jpg')">
+                        <img src="project/littledream/Breakingcard.jpg" alt="bcard" class="art" onclick="openPopup('project/littledream/Breakingcard.jpg')">
+                        <img src="project/littledream/Reportcard.jpg" alt="rcard" class="art" onclick="openPopup('project/littledream/Reportcard.jpg')">
                     </div>
                     <br>
                     <br>
