--- a/codepros.html
+++ b/codepros.html
@@ -21,7 +21,7 @@
                 <p style="font-size: 13px; color: gray; margin-bottom: 20px;">
                     - Code can be provided upon request.
                 </p>
-                <div class="codelist">
+                <div class="projectlist">
                     <div class="codeimage">
                         <a href="codes/portal/Lab12.html" target="_blank">
                             <img src="img_folder/code_img/portal.jpg" alt="portal" class="codepic">
