--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
                     <h2>Projects</h2>
                 </div>
                 <br>
-                <div class="codelist">
+                <div class="projectlist">
                     <div class="proimage" onclick="directToCitywitch()">
                         <img src="project/citywitch/Title_Page.jpg" alt="citywitch" class="codepic">
                         <div class="overlay1">
